# data-generator

./: .gitignore  .rules  CMakeLists.txt  README.md  eula.txt  makefile  run-all.sh  run-gen.sh
data_generator_tools/: makefile
data_generator_tools/include/: file_writer.hpp  json.hpp  nbt.hpp  utils.hpp
data_generator_tools/src/: file_writer.cpp  main.cpp  utils.cpp
include/: dataGenerator.hpp  downloader.hpp  registry_manager.hpp  server_downloader.hpp  server_extration.hpp
server/: run-gen.sh
src/: main.cpp
src/extract_data/: registry_manager.cpp  run_java_server.cpp
src/server_downloader/: server_downloader.cpp  version_selector.cpp
src/utils/: downloader.cpp
test/: test_tags.cpp
